Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/Core.pas

function LLVMGetFirstGlobal(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetLastGlobal(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetNextGlobal(GlobalVar:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetPreviousGlobal(GlobalVar:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
procedure LLVMDeleteGlobal(GlobalVar:TLLVMValueRef);cdecl;external libllvm;
function LLVMGetInitializer(GlobalVar:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
procedure LLVMSetInitializer(GlobalVar:TLLVMValueRef; ConstantVal:TLLVMValueRef);cdecl;external libllvm;
function LLVMIsThreadLocal(GlobalVar:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
procedure LLVMSetThreadLocal(GlobalVar:TLLVMValueRef; IsThreadLocal:TLLVMBool);cdecl;external libllvm;
function LLVMIsGlobalConstant(GlobalVar:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
procedure LLVMSetGlobalConstant(GlobalVar:TLLVMValueRef; IsConstant:TLLVMBool);cdecl;external libllvm;
function LLVMGetThreadLocalMode(GlobalVar:TLLVMValueRef):TLLVMThreadLocalMode;cdecl;external libllvm;
procedure LLVMSetThreadLocalMode(GlobalVar:TLLVMValueRef; Mode:TLLVMThreadLocalMode);cdecl;external libllvm;
function LLVMIsExternallyInitialized(GlobalVar:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
procedure LLVMSetExternallyInitialized(GlobalVar:TLLVMValueRef; IsExtInit:TLLVMBool);cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCoreValueConstantGlobalAlias Global Aliases
 *
 * This group contains function that operate on global alias values.
 *
 * @see llvm::GlobalAlias
 *
 * @
  }
{*
 * Add a GlobalAlias with the given value type, address space and aliasee.
 *
 * @see llvm::GlobalAlias::create()
  }
function LLVMAddAlias2(M:TLLVMModuleRef; ValueTy:TLLVMTypeRef; AddrSpace:dword; Aliasee:TLLVMValueRef; Name:Pchar):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a GlobalAlias value from a Module by its name.
 *
 * The returned value corresponds to a llvm::GlobalAlias value.
 *
 * @see llvm::Module::getNamedAlias()
  }
function LLVMGetNamedGlobalAlias(M:TLLVMModuleRef; Name:Pchar; NameLen:Tsize_t):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain an iterator to the first GlobalAlias in a Module.
 *
 * @see llvm::Module::alias_begin()
  }
function LLVMGetFirstGlobalAlias(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain an iterator to the last GlobalAlias in a Module.
 *
 * @see llvm::Module::alias_end()
  }
function LLVMGetLastGlobalAlias(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Advance a GlobalAlias iterator to the next GlobalAlias.
 *
 * Returns NULL if the iterator was already at the end and there are no more
 * global aliases.
  }
function LLVMGetNextGlobalAlias(GA:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Decrement a GlobalAlias iterator to the previous GlobalAlias.
 *
 * Returns NULL if the iterator was already at the beginning and there are
 * no previous global aliases.
  }
function LLVMGetPreviousGlobalAlias(GA:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Retrieve the target value of an alias.
  }
function LLVMAliasGetAliasee(Alias:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Set the target value of an alias.
  }
procedure LLVMAliasSetAliasee(Alias:TLLVMValueRef; Aliasee:TLLVMValueRef);cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueFunction Function values
 *
 * Functions in this group operate on LLVMValueRef instances that
 * correspond to llvm::Function instances.
 *
 * @see llvm::Function
 *
 * @
  }
{*
 * Remove a function from its containing module and deletes it.
 *
 * @see llvm::Function::eraseFromParent()
  }
procedure LLVMDeleteFunction(Fn:TLLVMValueRef);cdecl;external libllvm;
{*
 * Check whether the given function has a personality function.
 *
 * @see llvm::Function::hasPersonalityFn()
  }
function LLVMHasPersonalityFn(Fn:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Obtain the personality function attached to the function.
 *
 * @see llvm::Function::getPersonalityFn()
  }
function LLVMGetPersonalityFn(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Set the personality function attached to the function.
 *
 * @see llvm::Function::setPersonalityFn()
  }
procedure LLVMSetPersonalityFn(Fn:TLLVMValueRef; PersonalityFn:TLLVMValueRef);cdecl;external libllvm;
{*
 * Obtain the intrinsic ID number which matches the given function name.
 *
 * @see llvm::Intrinsic::lookupIntrinsicID()
  }
function LLVMLookupIntrinsicID(Name:Pchar; NameLen:Tsize_t):dword;cdecl;external libllvm;
{*
 * Obtain the ID number from a function instance.
 *
 * @see llvm::Function::getIntrinsicID()
  }
function LLVMGetIntrinsicID(Fn:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Get or insert the declaration of an intrinsic.  For overloaded intrinsics,
 * parameter types must be provided to uniquely identify an overload.
 *
 * @see llvm::Intrinsic::getOrInsertDeclaration()
  }
function LLVMGetIntrinsicDeclaration(Mod:TLLVMModuleRef; ID:dword; ParamTypes:PLLVMTypeRef; ParamCount:Tsize_t):TLLVMValueRef;cdecl;external libllvm;
{*
 * Retrieves the type of an intrinsic.  For overloaded intrinsics, parameter
 * types must be provided to uniquely identify an overload.
 *
 * @see llvm::Intrinsic::getType()
  }
function LLVMIntrinsicGetType(Ctx:TLLVMContextRef; ID:dword; ParamTypes:PLLVMTypeRef; ParamCount:Tsize_t):TLLVMTypeRef;cdecl;external libllvm;
{*
 * Retrieves the name of an intrinsic.
 *
 * @see llvm::Intrinsic::getName()
  }
function LLVMIntrinsicGetName(ID:dword; NameLength:Psize_t):Pchar;cdecl;external libllvm;
{* Deprecated: Use LLVMIntrinsicCopyOverloadedName2 instead.  }
function LLVMIntrinsicCopyOverloadedName(ID:dword; ParamTypes:PLLVMTypeRef; ParamCount:Tsize_t; NameLength:Psize_t):Pchar;cdecl;external libllvm;
{*
 * Copies the name of an overloaded intrinsic identified by a given list of
 * parameter types.
 *
 * Unlike LLVMIntrinsicGetName, the caller is responsible for freeing the
 * returned string.
 *
 * This version also supports unnamed types.
 *
 * @see llvm::Intrinsic::getName()
  }
function LLVMIntrinsicCopyOverloadedName2(Mod:TLLVMModuleRef; ID:dword; ParamTypes:PLLVMTypeRef; ParamCount:Tsize_t; NameLength:Psize_t):Pchar;cdecl;external libllvm;
{*
 * Obtain if the intrinsic identified by the given ID is overloaded.
 *
 * @see llvm::Intrinsic::isOverloaded()
  }
function LLVMIntrinsicIsOverloaded(ID:dword):TLLVMBool;cdecl;external libllvm;
{*
 * Obtain the calling function of a function.
 *
 * The returned value corresponds to the LLVMCallConv enumeration.
 *
 * @see llvm::Function::getCallingConv()
  }
function LLVMGetFunctionCallConv(Fn:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Set the calling convention of a function.
 *
 * @see llvm::Function::setCallingConv()
 *
 * @param Fn Function to operate on
 * @param CC LLVMCallConv to set calling convention to
  }
procedure LLVMSetFunctionCallConv(Fn:TLLVMValueRef; CC:dword);cdecl;external libllvm;
{*
 * Obtain the name of the garbage collector to use during code
 * generation.
 *
 * @see llvm::Function::getGC()
  }
function LLVMGetGC(Fn:TLLVMValueRef):Pchar;cdecl;external libllvm;
{*
 * Define the garbage collector to use during code generation.
 *
 * @see llvm::Function::setGC()
  }
procedure LLVMSetGC(Fn:TLLVMValueRef; Name:Pchar);cdecl;external libllvm;
{*
 * Gets the prefix data associated with a function. Only valid on functions, and
 * only if LLVMHasPrefixData returns true.
 * See https://llvm.org/docs/LangRef.html#prefix-data
  }
function LLVMGetPrefixData(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Check if a given function has prefix data. Only valid on functions.
 * See https://llvm.org/docs/LangRef.html#prefix-data
  }
function LLVMHasPrefixData(Fn:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Sets the prefix data for the function. Only valid on functions.
 * See https://llvm.org/docs/LangRef.html#prefix-data
  }
procedure LLVMSetPrefixData(Fn:TLLVMValueRef; prefixData:TLLVMValueRef);cdecl;external libllvm;
{*
 * Gets the prologue data associated with a function. Only valid on functions,
 * and only if LLVMHasPrologueData returns true.
 * See https://llvm.org/docs/LangRef.html#prologue-data
  }
function LLVMGetPrologueData(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Check if a given function has prologue data. Only valid on functions.
 * See https://llvm.org/docs/LangRef.html#prologue-data
  }
function LLVMHasPrologueData(Fn:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Sets the prologue data for the function. Only valid on functions.
 * See https://llvm.org/docs/LangRef.html#prologue-data
  }
procedure LLVMSetPrologueData(Fn:TLLVMValueRef; prologueData:TLLVMValueRef);cdecl;external libllvm;
{*
 * Add an attribute to a function.
 *
 * @see llvm::Function::addAttribute()
  }
procedure LLVMAddAttributeAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex; A:TLLVMAttributeRef);cdecl;external libllvm;
function LLVMGetAttributeCountAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex):dword;cdecl;external libllvm;
procedure LLVMGetAttributesAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex; Attrs:PLLVMAttributeRef);cdecl;external libllvm;
function LLVMGetEnumAttributeAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex; KindID:dword):TLLVMAttributeRef;cdecl;external libllvm;
function LLVMGetStringAttributeAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex; K:Pchar; KLen:dword):TLLVMAttributeRef;cdecl;external libllvm;
procedure LLVMRemoveEnumAttributeAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex; KindID:dword);cdecl;external libllvm;
procedure LLVMRemoveStringAttributeAtIndex(F:TLLVMValueRef; Idx:TLLVMAttributeIndex; K:Pchar; KLen:dword);cdecl;external libllvm;
{*
 * Add a target-dependent attribute to a function
 * @see llvm::AttrBuilder::addAttribute()
  }
procedure LLVMAddTargetDependentFunctionAttr(Fn:TLLVMValueRef; A:Pchar; V:Pchar);cdecl;external libllvm;
{*
 * @defgroup LLVMCCoreValueFunctionParameters Function Parameters
 *
 * Functions in this group relate to arguments/parameters on functions.
 *
 * Functions in this group expect LLVMValueRef instances that correspond
 * to llvm::Function instances.
 *
 * @
  }
{*
 * Obtain the number of parameters in a function.
 *
 * @see llvm::Function::arg_size()
  }
function LLVMCountParams(Fn:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Obtain the parameters in a function.
 *
 * The takes a pointer to a pre-allocated array of LLVMValueRef that is
 * at least LLVMCountParams() long. This array will be filled with
 * LLVMValueRef instances which correspond to the parameters the
 * function receives. Each LLVMValueRef corresponds to a llvm::Argument
 * instance.
 *
 * @see llvm::Function::arg_begin()
  }
procedure LLVMGetParams(Fn:TLLVMValueRef; Params:PLLVMValueRef);cdecl;external libllvm;
{*
 * Obtain the parameter at the specified index.
 *
 * Parameters are indexed from 0.
 *
 * @see llvm::Function::arg_begin()
  }
function LLVMGetParam(Fn:TLLVMValueRef; Index:dword):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the function to which this argument belongs.
 *
 * Unlike other functions in this group, this one takes an LLVMValueRef
 * that corresponds to a llvm::Attribute.
 *
 * The returned LLVMValueRef is the llvm::Function to which this
 * argument belongs.
  }
function LLVMGetParamParent(Inst:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the first parameter to a function.
 *
 * @see llvm::Function::arg_begin()
  }
function LLVMGetFirstParam(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the last parameter to a function.
 *
 * @see llvm::Function::arg_end()
  }
function LLVMGetLastParam(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
